--- a/loligochi/loligochi-app/MainWindow.xaml
+++ b/loligochi/loligochi-app/MainWindow.xaml
@@ -762,32 +762,15 @@
 
             </Button>
 
-            <TextBlock x:Name="Save_Select_Scene_Option_1" IsEnabled="false" MouseDown="Save_Select_Option_1_Clicked" FontSize="36" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="0,160,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" LineHeight="72">
-                <TextBlock.Effect>
-                    <DropShadowEffect/>
-                </TextBlock.Effect>
-    -Empty Save Slot-
-            </TextBlock>
-            <TextBlock x:Name="Save_Select_Scene_Option_4" IsEnabled="false" MouseDown="Save_Select_Option_4_Clicked" FontSize="36" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="0,391,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" LineHeight="72">
-                <TextBlock.Effect>
-                    <DropShadowEffect/>
-                </TextBlock.Effect>
-    -Empty Save Slot-
-            </TextBlock>
-            <TextBlock x:Name="Save_Select_Scene_Option_3" IsEnabled="false" MouseDown="Save_Select_Option_3_Clicked" FontSize="36" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="0,314,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" LineHeight="72">
-                <TextBlock.Effect>
-                    <DropShadowEffect/>
-                </TextBlock.Effect>
-    -Empty Save Slot-
-            </TextBlock>
-            <TextBlock x:Name="Save_Select_Scene_Option_2" IsEnabled="false" HorizontalAlignment="Center" MouseDown="Save_Select_Option_2_Clicked" FontSize="36" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="0,237,0,0" VerticalAlignment="Top"  LineHeight="72">
+            <TextBlock x:Name="Save_Select_Scene_Option_1" IsEnabled="false" MouseDown="Save_Select_Option_1_Clicked" FontSize="36" FontFamily="Copperplate Gothic Bold" Foreground="White" Margin="0,258,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" LineHeight="72" TextAlignment="Center">
                 <TextBlock.Effect>
                     <DropShadowEffect/>
                 </TextBlock.Effect>
     -Empty Save Slot-
             </TextBlock>
 
-            <Button Style="{DynamicResource DownArrowStyling}"  x:Name="Down_Arrow_Save_Select" HorizontalAlignment="Left" Margin="564,463,0,0" VerticalAlignment="Top" Height="67" Width="76" Click="Rotate_The_Save_Slots_By_Arrow_Down" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}" MouseEnter="Button_Hover_SoundEffect">
+
+            <Button Style="{DynamicResource DownArrowStyling}"  x:Name="Down_Arrow_Save_Select" HorizontalAlignment="Left" Margin="562,308,0,0" VerticalAlignment="Top" Height="67" Width="76" Click="Rotate_The_Save_Slots_By_Arrow_Down" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}" MouseEnter="Button_Hover_SoundEffect">
                 <Button.Background >
                     <ImageBrush x:Name="Down_Arrow_Save_Select_Background"  ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
                         <ImageBrush.RelativeTransform>
@@ -802,7 +785,7 @@
                 </Button.Background>
 
             </Button>
-            <Button Style="{DynamicResource UpArrowStyling}"  x:Name="Up_Arrow_Save_Select" HorizontalAlignment="Left" Margin="638,463,0,0" VerticalAlignment="Top" Height="67" Width="76" Click="Rotate_The_Save_Slots_By_Arrow_Up" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}" MouseEnter="Button_Hover_SoundEffect">
+            <Button Style="{DynamicResource UpArrowStyling}"  x:Name="Up_Arrow_Save_Select" HorizontalAlignment="Left" Margin="640,308,0,0" VerticalAlignment="Top" Height="67" Width="76" Click="Rotate_The_Save_Slots_By_Arrow_Up" FontFamily="Copperplate Gothic Bold" FontSize="24" Foreground="White" Cursor="Arrow" BorderBrush="{x:Null}" MouseEnter="Button_Hover_SoundEffect">
                 <Button.Background >
                     <ImageBrush x:Name="Up_Arrow_Save_Select_Background"  ImageSource="/src/images/assets/arrow.png" TileMode="None" Stretch="Uniform">
                         <ImageBrush.RelativeTransform>
