Minor changer -> Trace removes

--- a/loligochi/loligochi-app/MainWindow.xaml
+++ b/loligochi/loligochi-app/MainWindow.xaml
@@ -739,7 +739,7 @@
 
             </Image>
         </Grid>
-        <Grid x:Name="Load_Game_Scene" Visibility="Visible">
+        <Grid x:Name="Load_Game_Scene" Visibility="Hidden">
             <Grid.Background>
                 <ImageBrush Stretch="UniformToFill" ImageSource="src/images/assets/background.jpg_large" Opacity="1"/>
             </Grid.Background>
